--- a/Form.html
+++ b/Form.html
@@ -31,7 +31,7 @@
         <br><br>
 
         <label for="room">Room Type :</label>
-        <select id="room" name="roomtype">
+        <select id="room" name="roomtype" required>
             <option value="single">Single Bed</option>
             <option value="double">Double Bed</option>
             <option value="two">Two Single Bed</option>
@@ -40,7 +40,7 @@
         <br><br>
 
         <label for="guests#">Number of Guests :</label>
-        <input type="number" id="guests#" name="guestnumber" min="1" max="3">
+        <input type="number" id="guests#" name="guestnumber" min="1" max="3" required>
         <br><br>
 
         <label for="spl_req">Special Requests :</label>
