--- a/Form.html
+++ b/Form.html
@@ -8,7 +8,7 @@
 <body>
     <fieldset>
         <h1 style="text-align: center;">Hotel Room Booking Form</h1>
-        <form action="./response.html" name="biodata" target="_blank" method="get" align="center">
+        <form action="./book.html" name="roombooking" target="_blank" method="get" align="center">
 
         <label for="name">Full Name :</label>
         <input type="text" id="name" name="name" placeholder="Enter Your Name" required>
